--- a/index.html
+++ b/index.html
@@ -4,31 +4,34 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Trafalgar</title>
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <header>
-    <a href="/"><img src="./images/site_logo.svg" alt="site logo" width="160" height="41"></a>
-    <ul>
-      <li>Home</li>
-      <li>Find a doctor</li>
-      <li>Apps</li>
-      <li>Testimonials</li>
-      <li>About us</li>
+  <header class="site_heder">
+    <a class="site_logo_link" href="/"><img class="site_logo" src="./images/site_logo.svg" alt="site logo" width="160" height="41"></a>
+   <nav class="nav">
+    <ul class="list">
+      <li class="list_item">Home</li>
+      <li class="list_item">Find a doctor</li>
+      <li class="list_item">Apps</li>
+      <li class="list_item">Testimonials</li>
+      <li class="list_item">About us</li>
     </ul>
+   </nav> 
   </header>
-  <main>
-    <section>
-      <h2>Virtual healthcare for you</h2>
-      <p>Trafalgar provides progressive, and affordable 
+  <main class="site_main">
+    <section class="hero">
+      <h2 class="hero_title">Virtual healthcare for you</h2>
+      <p class="title_desc">Trafalgar provides progressive, and affordable 
         healthcare, accessible on mobile and online 
         for everyone</p>
-        <a href="">Consult today</a>
-        <img src="./images/trafalgar-headerillustration.png" alt="the mean img in trafalgar" width="609" height="532">
+        <a class="hero_link" href="">Consult today</a>
+        <img class="hero_img" src="./images/trafalgar-headerillustration.png" alt="the mean img in trafalgar" width="609" height="532">
 
     </section>
-    <section>
-      <h2>Our services</h2>
-      <p>We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+    <section class="services">
+      <h2 class="services_title">Our services</h2>
+      <p >We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
       <ol>
         <li>
           <img src="./images/search_icon.svg" alt="search icon" width="97" height="94">
