--- a/index.html
+++ b/index.html
@@ -11,66 +11,67 @@
     <a class="site_logo_link" href="/"><img class="site_logo" src="./images/site_logo.svg" alt="site logo" width="160" height="41"></a>
    <nav class="nav">
     <ul class="list">
-      <li class="list_item">Home</li>
-      <li class="list_item">Find a doctor</li>
-      <li class="list_item">Apps</li>
-      <li class="list_item">Testimonials</li>
-      <li class="list_item">About us</li>
+      <li class="list_item"><a class="item_link" href="/">Home</a></li>
+      <li class="list_item"><a class="item_link" href="/">Find a doctor</a></li>
+      <li class="list_item"><a class="item_link" href="/">Apps</a></li>
+      <li class="list_item"><a class="item_link" href="/">Testimonials</a></li>
+      <li class="list_item"><a class="item_link" href="/">About us</a></li>
     </ul>
    </nav> 
   </header>
   <main class="site_main">
     <section class="hero">
-      <h2 class="hero_title">Virtual healthcare for you</h2>
-      <p class="title_desc">Trafalgar provides progressive, and affordable 
-        healthcare, accessible on mobile and online 
-        for everyone</p>
+      <div class="wraper-text">
+        <h1 class="hero_title">Virtual healthcare for you</h1>
+        <p class="title_desc">Trafalgar provides progressive, and affordable  healthcare, accessible on mobile and online  for everyone</p>
         <a class="hero_link" href="">Consult today</a>
-        <img class="hero_img" src="./images/trafalgar-headerillustration.png" alt="the mean img in trafalgar" width="609" height="532">
+      </div>
+      <img class="hero_img" src="./images/trafalgar-headerillustration.png" alt="the mean img in trafalgar" width="609" height="532">
 
     </section>
     <section class="services">
       <h2 class="services_title">Our services</h2>
-      <p >We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
-      <ol>
-        <li>
-          <img src="./images/search_icon.svg" alt="search icon" width="97" height="94">
-          <h3>Search doctor</h3>
-          <p>Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
+      <span class="line"></span>
+      <p class="services_title_desc" >We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo treatment with our highly qualified doctors you can consult with us which type of service is suitable for your health</p>
+      <ol class="prdered_list">
+        <li class="types_of_list">
+          <img class="types_img" src="./images/search_icon.svg" alt="search icon" width="97" height="94">
+          <h3 class="types_of_list_name">Search doctor</h3>
+          <p class="name_desc">Choose your doctor from thousands of specialist, general, and trusted hospitals</p>
         </li>
         <li>
-          <img src="./images/pharmacy.svg" alt="pharmacy icon" width="67" height="91">
-          <h3>Online pharmacy</h3>
-          <p>Buy  your medicines with our mobile application with a simple delivery system</p>
+          <img class="types_img" src="./images/pharmacy.svg" alt="pharmacy icon" width="67" height="91">
+          <h3 class="types_of_list_name">Online pharmacy</h3>
+          <p class="name_desc">Buy  your medicines with our mobile application with a simple delivery system</p>
+        </li>
+        <li class="types_of_list">
+          <img class="types_img" src="./images/consultation.svg" alt="consultation icon" width="70" height="99">
+          <h3 class="types_of_list_name">Consultation</h3>
+          <p class="name_desc">Free consultation with our trusted doctors and get the best recomendations</p>
+        </li>
+        <li class="types_of_list">
+          <img class="types_img" src="./images/info.svg" alt="info icon" width="70" height="99">
+          <h3 class="types_of_list_name">Details info</h3>
+          <p class="name_desc">Free consultation with our trusted doctors and get the best recomendations</p>
+        </li>
+        <li class="types_of_list">
+          <img class="types_img" src="./images/care.svg" alt="care icon" width="84" height="75">
+          <h3 class="types_of_list_name">Emergency care</h3>
+          <p class="name_desc">You can get 24/7 urgent care for yourself or your children and your lovely family</p>
         </li>
         <li>
-          <img src="./images/consultation.svg" alt="consultation icon" width="70" height="99">
-          <h3>Consultation</h3>
-          <p>Free consultation with our trusted doctors and get the best recomendations</p>
-        </li>
-        <li>
-          <img src="./images/info.svg" alt="info icon" width="70" height="99">
-          <h3>Details info</h3>
-          <p>Free consultation with our trusted doctors and get the best recomendations</p>
-        </li>
-        <li>
-          <img src="./images/care.svg" alt="care icon" width="84" height="75">
-          <h3>Emergency care</h3>
-          <p>You can get 24/7 urgent care for yourself or your children and your lovely family</p>
-        </li>
-        <li>
-          <img src="./images/tracking.svg" alt="tracking icon" width="75" height="102">
-          <h3>Tracking</h3>
-          <p>Track and save your medical history and health data </p>
+          <img class="types_img" src="./images/tracking.svg" alt="tracking icon" width="75" height="102">
+          <h3 class="types_of_list_name">Tracking</h3>
+          <p class="name_desc">Track and save your medical history and health data </p>
         </li>
       </ol>
-      <a href="">Learn more</a>
+      <a class="services_link" href="/">Learn more</a>
     </section>
 
-    <section>
+    <section class="">
       <!-- <h2></h2> -->
       <img src="./images/trafalgar-illustrationsec.png" alt="" width="628" height="463">
-      <h3>Leading healthcare providers</h3>
+      <h3 class="">Leading healthcare providers</h3>
       <p>Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online for everyone. To us, it’s not just work. We take pride 
         in the solutions we deliver</p>
         <a href="">Learn more</a>
