--- a/index.html
+++ b/index.html
@@ -8,28 +8,34 @@
 </head>
 <body>
   <header class="site_heder">
+    <div class="container">
+      <div class="herader-inner">
     <a class="site_logo_link" href="/"><img class="site_logo" src="./images/site_logo.svg" alt="site logo" width="160" height="41"></a>
-   <nav class="nav">
-    <ul class="list">
-      <li class="list_item"><a class="item_link home" href="/">Home</a></li>
-      <li class="list_item"><a class="item_link" href="/">Find a doctor</a></li>
-      <li class="list_item"><a class="item_link" href="/">Apps</a></li>
-      <li class="list_item"><a class="item_link" href="/">Testimonials</a></li>
-      <li class="list_item"><a class="item_link" href="/">About us</a></li>
+   <nav class="sitenav">
+    <ul class="sitenav-list">
+      <li class="sitenav_item"><a class="item_link home" href="/">Home</a></li>
+      <li class="sitenav_item"><a class="item_link" href="/">Find a doctor</a></li>
+      <li class="sitenav_item"><a class="item_link" href="/">Apps</a></li>
+      <li class="sitenav_item"><a class="item_link" href="/">Testimonials</a></li>
+      <li class="sitenav_item last"><a class="item_link " href="/">About us</a></li>
     </ul>
-   </nav> 
+   </nav>
+  </div>
+  </div> 
   </header>
   <main class="site_main">
     <section class="hero">
+      <div class="container">
       <div class="wraper-text">
         <h1 class="hero_title">Virtual healthcare for you</h1>
         <p class="title_desc">Trafalgar provides progressive, and affordable  healthcare, accessible on mobile and online  for everyone</p>
         <a class="hero_link" href="">Consult today</a>
       </div>
       <img class="hero_img" src="./images/trafalgar-headerillustration.png" alt="the mean img in trafalgar" width="609" height="532">
-
+    </div>
     </section>
     <section class="services">
+      <div class="container">
       <div class="wrapper_services_text">
         <h2 class="services_title">Our services</h2>
       <span class="line"></span>
@@ -68,9 +74,11 @@
         </li>
       </ol>
       <a class="services_link" href="/">Learn more</a>
+    </div>
     </section>
 
     <section class="about">
+      <div class="container">
       <!-- <h2></h2> -->
       <img class="about_img" src="./images/trafalgar-illustrationsec.png" alt="" width="628" height="463">
       <div class="wrapper_about_title">
@@ -88,26 +96,31 @@
           <a class="download services_link " href="">Download</a>
       </div>
           <img class="about_img" src="./images/trafalgar-illustrationsec1.png" alt="" width="665" height="434">
+        </div>
     </section>
     <article class="aside">
+      <div class="container">
       <div class="aside_inner">
         <h2 class="aside_title">What our customer are saying</h2>
         <span class="line aside_line"></span>
-        <img class="aside_img" src="./images/image1.png" alt="" width="149" height="149">
-        <strong class="worker_name">Edward Newgate</strong>
-        <p class="worker">Founder Circle</p>
-        <blockquote class="worker_words">“Our dedicated patient engagement app and 
+        <img class="aside_img" src="./images/articleimg.png" alt="" width="149" height="149" srcset="./images/articleimg.png 1x, ./images/articleimg@2.png 2x">
+        <div class="wrapper-worker-name">
+          <strong class="worker_name">Edward Newgate</strong>
+          <p class="worker">Founder Circle</p>
+        </div>
+        <blockquote class="worker_words" cite="Edward Newgate">“Our dedicated patient engagement app and 
           web portal allow you to access information instantaneously (no tedeous form, long calls, 
           or administrative hassle) and securely”</blockquote>
       </div>
-      
+    </div>
     </article>
     <section class="check">
+      <div class="container">
       <h2 class="check_title">Check out our latest article</h2>
       <span class="line check_line"></span>
       <ul class="check_list">
         <li class="check_item">
-          <img class="item_img" src="./images/check_up.png" alt="" width="380" height="240">
+          <img class="item_img" src="./images/check_up.png" alt="" width="380" height="240" srcset="./images/check_up.png 1x, ./images/check_up@2x.png 2x">
           <h3 class="item_title">Disease detection, check 
             up in the laboratory</h3>
             <p class="item_title_desc">In this case, the role of the health laboratory is very important to do
@@ -115,14 +128,14 @@
               <a class="check_item_link" href="">Read more</a>
         </li>
         <li class="check_item">
-          <img class="item_img" src="./images/lab.png" alt="" width="380" height="240">
+          <img class="item_img" src="./images/lab.png" alt="" width="380" height="240" srcset="./images/lab.png 1x, ./images/lab@2x.png 2x ">
           <h3 class="item_title">Herbal medicines that are 
             safe for consumption</h3>
             <p class="item_title_desc">Herbal medicine is very widely used at this time because of its very good for your health...</p>
               <a class="check_item_link" href="">Read more</a>
         </li>
         <li class="check_item">
-          <img class="item_img" src="./images/natural.png" alt="" width="380" height="240">
+          <img class="item_img" src="./images/natural.png" alt="" width="380" height="240" srcset="./images/natural.png 1x, ./images/natural@2x.png 2x">
           <h3 class="item_title">Disease detection, check 
             up in the laboratory</h3>
             <p class="item_title_desc">In this case, the role of the health laboratory is very important to do
@@ -131,12 +144,13 @@
         </li>
       </ul>
       <a class="more" href="">View all</a>
-
+    </div>
     </section>
    
     
   </main>
   <footer class="site_footer">
+    <div class="container">
    <div class="footer_inner">
     <a class="footer_logo_link" href="/"><img class="footer_logo" src="./images/footer_logo.svg" alt="footer logo" width="170" height="41"></a>
     <p class="footer_text">Trafalgar provides progressive, and affordable healthcare, accessible on mobile and online 
@@ -175,7 +189,7 @@
           </ul>
         </li>
       </ul>
-
+    </div>
   </footer>
 </body>
 </html>
